Fix bug in resource-scheduler displaying browser events (!)
- resource-scheduler now displays em-events, so that's cool
- they look awful and there's a bunch of styling issues to fix,
but as a proof of concept it's there, and it didn't take me too long,
either! what's uuuup

--- a/client/app/dashboard/resource-viewer/resource-scheduler-item.component.scss
+++ b/client/app/dashboard/resource-viewer/resource-scheduler-item.component.scss
@@ -4,4 +4,5 @@
 	display: block;
 	width: 100%;
 	height: 2em;
+	background-color: blue;
 }
